@@ -1,3 +1,9 @@
+[B]4.1.1[/B]
+- Fix support for Kodi 14
+
+[B]4.1.0[/B]
+- Show watch history for videos
+
 [B]4.0.0[/B]
 - Display more metadata for videos
 - Add podcast support
